created endpoint + tests
